--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,13 @@ a {
 
 .main-header img {
   border-radius: 50%;
+  transition: all 2.3s;
+}
+
+.main-header img:hover {
+  transform: scale(1.5);
+  border: 1px solid var(--backgroundPurple);
+
 }
 
 .main-header .title-kaban {
@@ -215,9 +222,12 @@ a {
   justify-content: space-around;
   padding: 54px 24px;
   gap: 10px;
-
+transition: all 0.3s;
 }
-
+.card:hover{
+  transform: scale(1.1);
+  border: 2px solid rgba(174, 18, 226, 0.1);
+}
 .card h3 {
   font-family: 'Inter';
   font-style: normal;
@@ -254,3 +264,4 @@ a {
   font-size: 11px;
   font-weight: bold;
 }
+
